--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="title-container">
     </div>
-    <div id="app"></div>
+    <h1>Welcome to m' blog.</h1>
     <script type="module" src="/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   </body>
